first commit and changes

--- a/Survey_Form/index.html
+++ b/Survey_Form/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tribute Page</title>
+    <title>Survey Form</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <div id="heads">
-        <h1 id="title">Customer Survey Form</h1>
-        <p id="description">Please fill up the below form</p>
+      <h1 id="title">Customer Survey Form</h1>
+      <p id="description">Please fill up the below form</p>
     </div>
         
     <div id="content">
-        <form id="survey-form">
+      <form id="survey-form">
           <label for="name" id="name-label">
           *Name: <input id="name" type="name" placeholder="Enter your name" required>
           </label></br>
@@ -57,7 +57,7 @@
           </textarea></p>
         
         <p><button type="submit" value="submit" id="submit">Submit</button></p>
-        </form>
+      </form>
     </div>
   </body>
 </html>
