image change for catch of the day

--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -30,7 +30,7 @@
     <div id="projects" class="port">
       <a href="https://fishmarketapp.jenipharachel.now.sh" target="_blank" class="img-text">
         <img
-          src="/home/jenipha/Desktop/Practise/Mini_Projects/My_Portfolio/media/catch-of-the-day.jpg"
+          src="/home/jenipha/Desktop/Practise/Mini_Projects/My_Portfolio/media/catchday.png"
           alt="project"
           class="project-tile"
         />
